--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
     var stimuli = [
         {stimulus:["videos/Kate_hand_01.mp4"]},
         {stimulus:["videos/Kate_hand_02.mp4"]},
-        {stimulus:["videos/Kate_hand_03.mp4"]},
-        {stimulus:["videos/Kate_back_01.mp4"]},
-        {stimulus:["videos/Kate_back_02.mp4"]},
-        {stimulus:["videos/Kate_back_03.mp4"]},
-        {stimulus:["videos/Kate_armA_01.mp4"]},
-        {stimulus:["videos/Kate_armA_02.mp4"]},
-        {stimulus:["videos/Kate_armA_03.mp4"]},
-        {stimulus:["videos/Kate_armB_01.mp4"]},
-        {stimulus:["videos/Kate_armB_02.mp4"]},
-        {stimulus:["videos/Kate_armB_03.mp4"]},
-        {stimulus:["videos/Kate_uparm_01.mp4"]},
-        {stimulus:["videos/Kate_uparm_02.mp4"]},
-        {stimulus:["videos/Kate_uparm_03.mp4"]},
+        // {stimulus:["videos/Kate_hand_03.mp4"]},
+        // {stimulus:["videos/Kate_back_01.mp4"]},
+        // {stimulus:["videos/Kate_back_02.mp4"]},
+        // {stimulus:["videos/Kate_back_03.mp4"]},
+        // {stimulus:["videos/Kate_armA_01.mp4"]},
+        // {stimulus:["videos/Kate_armA_02.mp4"]},
+        // {stimulus:["videos/Kate_armA_03.mp4"]},
+        // {stimulus:["videos/Kate_armB_01.mp4"]},
+        // {stimulus:["videos/Kate_armB_02.mp4"]},
+        // {stimulus:["videos/Kate_armB_03.mp4"]},
+        // {stimulus:["videos/Kate_uparm_01.mp4"]},
+        // {stimulus:["videos/Kate_uparm_02.mp4"]},
+        // {stimulus:["videos/Kate_uparm_03.mp4"]},
       ];
 
     var trials = {
