--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       min: 1,
       max: 70,
       start:35,
-      labels: ['1', '2','3','4','5','6','7'],
+      labels: ['1/nada', '2','3','4','5','6','7/mucho'],
       prompt: "<p>Puntúa lo que crees que le gusta a esa persona</p>"
     };
 
