--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>Videos [jsPsych]</title>
+    <title>Videos2[jsPsych]</title>
     <meta charset="UTF-8">
     <script type="text/javascript" src="jspsych.js"></script>
   	<link href="css/jspsych.css" rel="stylesheet" type="text/css" />
@@ -12,14 +12,7 @@
     <script type="text/javascript" src="plugins/jspsych-video-keyboard-response.js"></script>
     <script type="text/javascript" src="plugins/jspsych-fullscreen.js"></script>
     <script type="text/javascript" src="plugins/jspsych-survey-text.js"></script>
-    <?php
-    $post_data = json_decode(file_get_contents('php://input'), true);
-    // the directory "data" must be writable by the server
-    $name = "data/".$post_data['filename'].".csv";
-    $data = $post_data['filedata'];
-    // write the file to disk
-    file_put_contents($name, $data);
-    ?>
+
   </head>
   <body>
 
