--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>Videos2[jsPsych]</title>
+    <title>Videos3[jsPsych]</title>
     <meta charset="UTF-8">
     <script type="text/javascript" src="jspsych.js"></script>
   	<link href="css/jspsych.css" rel="stylesheet" type="text/css" />
@@ -57,7 +57,7 @@
       min: 1,
       max: 70,
       start:35,
-      labels: ['1/nada', '2','3','4','5','6','7/mucho'],
+      labels: ['1<br>nada', '2','3','4','5','6','7<br>mucho'],
       prompt: "<p>Puntúa lo que crees que le gusta a esa persona</p>"
     };
 
